# SoccerAI

./: CMakeLists.txt  README.md  SoccerAI.kdev4
src/: CMakeLists.txt  judge.cpp  main.cpp  mctsEvolve.cpp
src/AI/: AI.cpp  AI.hpp  AIFactory.cpp  AIFactory.hpp  AlfaBetaTree.cpp  AlfaBetaTree.hpp  AlphaBetaAI.cpp  AlphaBetaAI.hpp  AlphaBetaTree.cpp  AlphaBetaTree.hpp  ArrayMemoryManager.hpp  CMakeLists.txt  GraphAlphaBetaAI.cpp  GraphAlphaBetaAI.hpp  GraphMCTSAI.cpp  GraphMCTSAI.hpp  GraphMapMCTSAI.cpp  GraphMapMCTSAI.hpp  GraphTranspositionTableMCTSAI.cpp  GraphTranspositionTableMCTSAI.hpp  Judge.cpp  Judge.hpp  MCTSAI.cpp  MCTSAI.hpp  MemoryManager.hpp  PseudoDynamicArrayMemoryManager.hpp  RandomAI.cpp  RandomAI.hpp  SequentialTreeMCTSAI.cpp  SequentialTreeMCTSAI.hpp  Status.cpp  Status.hpp  TranspositionTable.hpp  TreeAlphaBetaAI.cpp  TreeAlphaBetaAI.hpp  judge.cpp  judge.hpp  objectiveFunctions.cpp  objectiveFunctions.hpp
src/Engine/: Board.cpp  Board.hpp  CMakeLists.txt  constants.hpp  engine.cpp  engine.hpp  types.hpp
src/Engine/tests/: BoardTest.cpp  CMakeLists.txt  HashTest.cpp  RandomTest.cpp  engineTest.cpp
